--- a/be/package.json
+++ b/be/package.json
@@ -13,12 +13,14 @@
     "@types/uuid": "^8.3.0",
     "bcrypt": "^5.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.2",
     "uuid": "^8.3.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.8",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/mongodb": "^3.5.27",
     "typescript": "^4.0.3"
   }
