--- a/scripts/package.json
+++ b/scripts/package.json
@@ -11,5 +11,8 @@
   "dependencies": {
     "typescript": "^4.0.3",
     "uuid": "^8.3.0"
+  },
+  "devDependencies": {
+    "@types/mongodb": "^3.5.27"
   }
 }
