--- a/fe-app-manager/package.json
+++ b/fe-app-manager/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@story-guess/ts-shared": "file:../ts-shared",
     "@material-ui/core": "^4.11.0",
     "@material-ui/data-grid": "^4.0.0-alpha.6",
+    "@material-ui/icons": "^4.9.1",
+    "@story-guess/ts-shared": "file:../ts-shared",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -13,7 +14,8 @@
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-scripts": "3.4.3",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "uuid": "^8.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -38,6 +40,7 @@
   },
   "devDependencies": {
     "@types/react-redux": "^7.1.9",
+    "@types/uuid": "^8.3.0",
     "typescript": "^4.0.3"
   }
 }
