--- a/fe-app-manager/package.json
+++ b/fe-app-manager/package.json
@@ -15,6 +15,7 @@
     "react-redux": "^7.2.1",
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
+    "sprintf-js": "^1.1.2",
     "uuid": "^8.3.0"
   },
   "scripts": {
@@ -40,6 +41,7 @@
   },
   "devDependencies": {
     "@types/react-redux": "^7.1.9",
+    "@types/sprintf-js": "^1.1.2",
     "@types/uuid": "^8.3.0",
     "typescript": "^4.0.3"
   }
